[package]
name = "denis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
deku = "0.16.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[patch.crates-io]
deku = { git = "https://github.com/romac/deku", branch = "romac/read-ctx" }
